=== master

* Enable window functions in SQLite 3.26.0+ (jeremyevans)

* Do not override existing methods when creating Sequel::Model attribute getter/setter methods (jeremyevans) (#1578)

* Use parentheses for expressions being subscripted (e.g. (array_agg(column))[1]) (jeremyevans)

=== 5.15.0 (2018-12-01)

* Add :conn_str option in the postgres adapter for PostgreSQL connection strings, if the pg driver is used (graywolf) (#1572)

* Add :qualify_tables option to class_table_inheritance plugin to automatically qualify subclass tables with superclass qualifier (benalavi) (#1571)

* Access already allocated connections in a thread safe manner when checking out connections in the sharded threaded connection pool (jeremyevans)

* Automatically support datasets using qualified tables in the class_table_inheritance plugin without having to use the :alias option (benalavi) (#1565)

* Support rename_column without emulation on SQLite 3.25+ (jeremyevans)

* Do not remove currently cached many_to_one associated objects when changing the related foreign key value from nil to non-nil (jeremyevans)

* Do not validate new *_to_many associated objects twice when saving in the nested_attributes plugin (jeremyevans)

* Add Model#skip_validation_on_next_save! for skipping validation on next save call (jeremyevans)

=== 5.14.0 (2018-11-01)

* Drop defaulting the :port option to 5432 in the postgres adapter, so that setting the :service option in :driver_options works (jeremyevans) (#1558)

* Do not cache values for columns without parseable defaults when using :cache option in defaults_setter plugin (jeremyevans)

* Emulate NULLS FIRST/LAST ordering on databases that do not natively support it (jeremyevans)

* Do not modify boolean expressions created from string or array if string or array is modified (jeremyevans)

* Make roots and roots_dataset dataset methods instead of class methods in the tree plugin (JelF) (#1554)
